# ComfyUI-rgbx

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt
configs/rgb-to-x/: model_index.json
configs/rgb-to-x/scheduler/: scheduler_config.json
configs/rgb-to-x/text_encoder/: config.json
configs/rgb-to-x/unet/: config.json
configs/rgb-to-x/vae/: config.json
pipelines/: __init__.py  pipeline_rgb2x.py  pipeline_x2rgb.py  pipeline_x2rgb_inpainting.py
